--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,17 @@ script:
     - sudo -u postgres psql -c "CREATE USER twobuntu WITH PASSWORD 'twobuntu'"
     - sudo -u postgres psql -c "CREATE DATABASE twobuntu WITH OWNER twobuntu"
     - cp twobuntu/local_settings.py.default twobuntu/local_settings.py
-    - perl -pi -e "s/('(?:NAME|USER|PASSWORD)':\s*')/\1twobuntu/" twobuntu/local_settings.py
-    - perl -pi -e "s/('HOST':\s*')/\1localhost/" twobuntu/local_settings.py
-    - perl -pi -e "s/'PORT':\s*'',//" twobuntu/local_settings.py
+    - echo "
+DATABASES = {
+    'default': {
+        'ENGINE':   'django.db.backends.postgresql_psycopg2',
+        'NAME':     'twobuntu',
+        'USER':     'twobuntu',
+        'PASSWORD': 'twobuntu',
+        'HOST':     'localhost',
+    },
+}
+
+SECRET_KEY = '1234567890abcdef'" >> twobuntu/local_settings.py
     - ./manage.py syncdb --noinput
     - ./manage.py migrate --noinput
