Added django-recaptcha (from Git) to list of requirements.

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ django-widget-tweaks
 Pillow
 python-dateutil
 python-twitter
+-e git+https://github.com/praekelt/django-recaptcha.git#egg=django-recaptcha
