--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
 script:
     - sudo -u postgres psql -c "CREATE USER twobuntu WITH PASSWORD 'twobuntu'"
     - sudo -u postgres psql -c "CREATE DATABASE twobuntu WITH OWNER twobuntu"
+    - sudo -u postgres psql -c "ALTER USER numbles CREATEDB"
     - cp twobuntu/local_settings.py.default twobuntu/local_settings.py
     - |
       echo "DATABASES = {
@@ -25,4 +26,4 @@ script:
       SECRET_KEY = '1234567890abcdef'" >> twobuntu/local_settings.py
     - ./manage.py syncdb --noinput
     - ./manage.py migrate --noinput
-    - ./manage.py test
+    - ./manage.py test --noinput
