--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,4 @@ django-widget-tweaks
 Pillow
 python-dateutil
 twitter
--e git+https://github.com/nathan-osman/django-recaptcha.git@django1.7#egg=django-recaptcha
+django-recaptcha>=1.0.1
