--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,8 @@ script:
       }
       CACHES = {
           'default': {
-              'BACKEND': 'redis_cache.cache.RedisCache',
-              'LOCATION': '127.0.0.1:6379:0',
+              'BACKEND': 'django_redis.cache.RedisCache',
+              'LOCATION': 'redis://127.0.0.1:6379/0',
           },
       }
       SECRET_KEY = '1234567890abcdef'" >> twobuntu/local_settings.py
