--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ django-archive>=0.1.5
 django-redis>=3.8.0
 django-widget-tweaks
 psycopg2
-pycannon>=0.3.0
+pyhectane>=0.3.1
 python-dateutil
 twitter
 six
